[package]
name = "rsdos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.12"

[profile.dev]
panic = "abort"  # disable stack unwinding

[profile.release]
panic = "abort"  # disable stack unwinding
strip = true
